objects/APXTConga4__Conga_Merge_Query__c.object
<CustomObject>
    <description>SOQL queries to be used with Conga Composer and/or Conga Mail Merge.</description>
    <fields>
        <fullName>APXTConga4__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Query__c</fullName>
        <label>SOQL Select Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conga Query</label>
    <listViews>
        <fullName>APXTConga4__All</fullName>
        <columns>NAME</columns>
        <columns>APXTConga4__Name__c</columns>
        <columns>APXTConga4__Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Nolan_Daigle_Conga_Merge_Query1</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CMQ-{0000}</displayFormat>
        <label>Conga Query Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>